[package]
name = "hello-wasm"
version = "0.1.0"
edition = "2021"
authors = ["WuEcho <emailforecho@163.com>"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2"
ewasm_api = { git = "https://github.com/WuEcho/ewasm-rust-api", tag = "0.9" }

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = 'z'
debug = false
rpath = false
debug-assertions = false
codegen-units = 1
lto = true
